Fix UAT